# ChangeLog for www-apps/owncloud
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/owncloud/ChangeLog,v 1.64 2015/03/11 16:21:57 voyageur Exp $

*owncloud-8.0.2 (11 Mar 2015)
*owncloud-7.0.5 (11 Mar 2015)
*owncloud-6.0.7 (11 Mar 2015)
*owncloud-5.0.19 (11 Mar 2015)

  11 Mar 2015; Bernard Cafarelli <voyageur@gentoo.org> -owncloud-5.0.18.ebuild,
  +owncloud-5.0.19.ebuild, -owncloud-6.0.6.ebuild, +owncloud-6.0.7.ebuild,
  -owncloud-7.0.4.ebuild, +owncloud-7.0.5.ebuild, +owncloud-8.0.2.ebuild:
  Version bumps, remove previous versions for old branches as some changelogs
  report security fixes

  09 Mar 2015; Bernard Cafarelli <voyageur@gentoo.org> owncloud-8.0.0.ebuild:
  Add warning about removed apps from core tarball, thanks Jaak Ristioja
  <jaak@ristioja.ee> bug #541230

*owncloud-8.0.0 (09 Feb 2015)

  09 Feb 2015; Bernard Cafarelli <voyageur@gentoo.org> -owncloud-7.0.3.ebuild,
  +owncloud-8.0.0.ebuild:
  Version bump, with smaller core tarball (some applications are not included
  by default anymore)

*owncloud-7.0.4 (10 Dec 2014)

  10 Dec 2014; Bernard Cafarelli <voyageur@gentoo.org> +owncloud-7.0.4.ebuild:
  Version bump

*owncloud-7.0.3 (14 Nov 2014)
*owncloud-6.0.6 (14 Nov 2014)
*owncloud-5.0.18 (14 Nov 2014)

  14 Nov 2014; Bernard Cafarelli <voyageur@gentoo.org> -owncloud-5.0.17.ebuild,
  +owncloud-5.0.18.ebuild, -owncloud-6.0.4.ebuild, -owncloud-6.0.5.ebuild,
  +owncloud-6.0.6.ebuild, -owncloud-7.0.1.ebuild, -owncloud-7.0.2.ebuild,
  +owncloud-7.0.3.ebuild:
  Version bumps, removing previous versions as changelog mentions security
  fixes

*owncloud-7.0.2 (29 Aug 2014)
*owncloud-6.0.5 (29 Aug 2014)

  29 Aug 2014; Bernard Cafarelli <voyageur@gentoo.org> +owncloud-6.0.5.ebuild,
  +owncloud-7.0.2.ebuild:
  Version bumps

*owncloud-7.0.1 (04 Aug 2014)

  04 Aug 2014; Bernard Cafarelli <voyageur@gentoo.org> +owncloud-7.0.1.ebuild:
  Version bump, fixes bug #518274
