@@ -1,0 +1,14 @@
+DEFINED_PHASES=install postinst prepare prerm setup
+DEPEND=>=app-admin/webapp-config-1.50.15
+DESCRIPTION=Web-based storage application where all your data is under your own control
+EAPI=5
+HOMEPAGE=http://owncloud.org
+IUSE=+curl mysql postgres +sqlite vhosts
+KEYWORDS=~amd64 ~arm ~x86
+LICENSE=AGPL-3
+RDEPEND=dev-lang/php[curl?,filter,gd,hash,json,mysql?,pdo,postgres?,simplexml,sqlite?,xmlwriter,zip] virtual/httpd-php >=app-admin/webapp-config-1.50.15
+REQUIRED_USE=|| ( mysql postgres sqlite )
+SLOT=8.0.3
+SRC_URI=http://download.owncloud.org/community/owncloud-8.0.3.tar.bz2 -> owncloud-8.0.3.tar.bz2
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	webapp	25b9b1696f5e698711f47d45c3d45e3e
+_md5_=71b1acf90ed80db36afeb34e3b34ce18
