@@ -6,17 +6,31 @@ DIST owncloud-6.0.7.tar.bz2 30850009 SHA256 eefc03bc782c243c220e4d42faeb4017b2e5
 DIST owncloud-7.0.5.tar.bz2 28236574 SHA256 3e45edb216afe12a84908106ad3cd36678a921fd978505688a16ae2de95941c8 SHA512 77c7519c8df1a892c143d1fc9e84901d6fb2e8920bf00300b43dbc2aaaf25b3539e189e2b75bd30db9c40963e3e98b00ef9ca6d7caffdec8a75257a0342e7b3a WHIRLPOOL 52cd6dbe005f3ab33b15fc8bbb6e40c4254ebd2c986a894cc07075f51b892026548b71a5503a391f0d0372a93e4b0d942800d7f7874ddcba2f8cae19b7bb8085
 DIST owncloud-8.0.0.tar.bz2 17200380 SHA256 0c62cb06fe4c3eb107bccc4302f2bb3b9f7e5373cf7c9dd307fea8e823e6342f SHA512 bc92f4341cb4b6b2f7b5f9218d8bb7f4321008d6f2391f237ea07303ffafef5aebc94317c690daea2f81d408b0278198c84cfbfc40192158ef5f08b482efa5a3 WHIRLPOOL 0a58336903e173962d6f308f955d95da9ef32d3ac2d9b7045ef212014a30862ed03a3af8f6c2dfc9e97cdfdcdf068f55057dd92a8436ce893a39e2e00fa5ed25
 DIST owncloud-8.0.2.tar.bz2 20422855 SHA256 46c73b6ae3841e856d139537d21e1c7029c64d79fd7c45c794e27cb1469d7f01 SHA512 780a9e3c2d8b62dab83681716b830cdc660621f0316b2c87a1f9472b72e8e69b4a48e29a344d4c7ed9d2dc6244b84806cfa9cd1a878669b51256cc8da40ee8a0 WHIRLPOOL 3ef1dd9bc92794f792fa9d55800f16a709ae2087d6a608ad84721364666027b08fcaed01e6a62854f25c36d4d29217ac9afb7138159c2544314d8db865e68112
+DIST owncloud-8.0.3.tar.bz2 20403786 SHA256 ba3556a652e653e30b73810abf18f48d2b4e612bc89d7020610f88e65f94d68b SHA512 3e66e499e1144b17f1386a12a3da2a15f32ff07d3208f545b15b3e3c295399f3fb5f5d7187111b0e13288010f1a939d97e6d50d4c3360f29c4b4a76787aa68ee WHIRLPOOL 07de165043faa876ccf82ba791dad0f8e33ca8cd123d55bb731215b92d0c9c7b8bdb3da99a483f0914532a78e201d6c0523f9d53d246ebbc0708220700676b71
 EBUILD owncloud-5.0.19.ebuild 1194 SHA256 42205ff25a3e4c14289f8271617c6c821fbebce6dededa485b9bfcc15ba4bead SHA512 2f96330b1ef4d32bccf63c1b5ab49d53912e9a030a84d9b4ef971aa7420f47be999cf6b104d1c3bcb2142358e7aeb7800a13290c13e1731a4054a5b7cf895365 WHIRLPOOL fbfcc737ec9f353631a7f511456fb38758ead30c316957be72935295c2be007e56860d1f3c98d79772c87fe830d750bf8a60e6915cd0fe9e6149e8a460c3615f
 EBUILD owncloud-6.0.7.ebuild 1141 SHA256 1735f739dc54a31ab523b7a34d54443bc5da95d1e5287cb55bed81b387705866 SHA512 b68fd772e939207e579bdebdaf932fef9e2d3090f71048a2c9fe6caea7ffd7480179e0eaefd6c9629e3275cdefbdf6dac0386082cb44b22c4481505225d9cfb9 WHIRLPOOL 0ea4b79d8999fb216097ba958de6d1a2c77fe0b12bfd27a58da15a744ade8121d30b71d490eff6a52d92ef460f53b5c81ffe7aa1d9bb05a4090620426010f9bc
 EBUILD owncloud-7.0.5.ebuild 1141 SHA256 6c5ae082dbf187c4903d89759d158094646155e1b58a740d0a9fe1ae5b331144 SHA512 d30bb2fe375044c7d0349a73e9c6e7c640a5d1e7912fc734dd438cc69fefcff3f1af57550362afc506add8bf56435f6092b318ee3fc6edcc65905912d167f67b WHIRLPOOL fdcf0bbfb34f63f4adbd437b9e95a559586b4ec8fe8da88dba6078af8dbcf8ef23425c0ace5ba9cb1d15b29985ff938f2880c383bd23fee81e3a922b78eef8b3
 EBUILD owncloud-8.0.0.ebuild 1409 SHA256 942569d49c49f4e8ee6bad9b7f01df6a15d57be33240d75c453ff9fb03f0aa8e SHA512 a84ec0a615391d13466e6e7f1ddf88d89d7eaf172cfa2424270c5aff24b0bd91a5c9508903b83163c6aa2a74926ec41e32eefd903daf023e95062b010701e34c WHIRLPOOL c5ea96f8016a150701a9e23f00182e12e260d2966d8f0fac8032bf404f101e1e6485eafe6a12dcb64c2923eec0ad2b3bf36fb15028d168b0cebc8decd5b6a35d
 EBUILD owncloud-8.0.2.ebuild 1409 SHA256 613f9028f432c147350d4e5e888868f5d94c05c8c9a6df74b33e1303cd1874f5 SHA512 2b447a2bcd8c18388db0217b8a47a0582a604c8156ae009975550ba038fb611cb861ea556d22598e4e282c662196f33a16f263c0d64a8c35612322b39549b0a8 WHIRLPOOL d7e5d3888e70f76597d2f246573ef776b23955ae430f7d1003ac464101ce9739ec26394190a97fa5be01cf8330259588480b3fe4c5a7fad3c6f72469b4819b5e
-MISC ChangeLog 14051 SHA256 892a2b75499c564ae206b81e8c315ecc7ed06345e45640be00bee5687c7aa2d5 SHA512 bc32b85238925651b4130f2f6c8c4a8feca8a741ff2af9685271d334653c1093c0f0d0993fe5eeca68decd6b9eb274583115c7a50f6dad5875624eb39ab4cc0d WHIRLPOOL 0ef040df914a37aa50a2f30fcaca919bb2eb1b9e63132d4733bacc60ad7b5dfa81ce92decfeabd621f67ebd35b610f7810a1af18ca2a8dea892d02b90ddb7573
+EBUILD owncloud-8.0.3.ebuild 1387 SHA256 e1353e56046139dc31ab1d21e880487c15c165325e9f57f6c4f12909e3e48a6f SHA512 54fd3d5a248c213007aeb9fda1ebd12b04244bbc5ef8d553ac7c6358ce8318afeec4d88ca4e1edc0f4dedf3fe39bc4b05dd8560a03906c9cbf03ea26291e0b7a WHIRLPOOL 4c1b4f3d6333fb28b518c41f6b553202f4e5ee770f533918a6eac8d94098c12ecafdcb94b735f5ce92352e2af8410c6f5639591804869c00b3c2a376f8ac6e41
+MISC ChangeLog 14300 SHA256 2b59c61a7d79d9deedd57f6168baed8874f05ee3c3607a8da64a730b33130856 SHA512 20f448e5f2c7715a500826f5dc1ec976f41503334dbb3ffbb7d19f32ab141d9512788b98c66d02ce11e79180f21102975d37ab5c3d096b74cdba42a58bb94ced WHIRLPOOL c6c5d0bfcbbd7801908e4d30ede52e3c52d6a9b97de4414d4690c9540adea36b2e9bbbd3c3eeba44c94e79cab74f83f278ca9e1546b6f569df41d0a10eec1677
 MISC metadata.xml 261 SHA256 d257237b248b326cd37d437d855241aa19cb033326c8f451bba18454c37e5670 SHA512 c8626fc3a8c3ac123b6f7e4bc1a1d689f6f64918377f807e7c7be119547c494184a0c661325579a88b517ae80aa733d68b7191958598348571e5a18b5ace5341 WHIRLPOOL c695e8052351e59f30f274989a498c8000299ad0b26ccc38ead11b2d0637fd1e4fd809e81362e18bfcd973f4e0c136794e7032c64bbc0f6d5763cd263389d823
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.1
 
-iF4EAREIAAYFAlUAa7kACgkQFYEBGcdFJfIP6wEAm/8HhsAPK2FmFtByp13J2nb+
-nyGhb16n5fpa13gXPscA/0BA0ejOXPpip6cIbvT292Gk03dM20hw2/eFcFKnonaq
-=mbsv
+iQJ8BAEBCABmBQJVRy96XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXREMzFDRDFGNEQwRTAyNjc2QzRDNjRFQzAw
+MEY3QUIzMzFCMEYwOTdGAAoJEAD3qzMbDwl/AC8QAJ0a94C+C2UBjFcabpagCkST
+ZP/H+Tf03RnxiuNozLZFfqD1IbyedqiJYpfOSK8mURzOyir3NQ92aFQREu1hj5rT
+pvTc+ncJRtc6fQO/Slo1OabXsx6uVP5E28Kj0N6JT2pzdPuZ13lF5PeJZgmKuI5e
+CThEq0Mm0P9bV90V40wzs2sW6w4FUB8sJaeW3ws2rmsKvQrLEqLfaDcXKF91geJf
+lblIE2cMcprCR3T6FV1TahHzExXWxD682Nx97kn5evWsbBMpmPFxrR2aLdv8KMEe
+M8+NkjC5CD4GfdOMivKnX9V8/Pb95Ww6Tdj8XDHCNk3fCSzulhbKzdYo1u6W7FHy
+ExvsBdH3S51nykPr8rnJ3JGJigayUvbSe8FkaOMkYA9T4YKRXgURUNkY7XFhvVc8
+TDsKPxP+m4didIczzhiGFOXArsdNsjDfv+UChwYXV+4GcjhKGVbKaAxUiMIYnxtY
+559bQoQmYce4YjbLsKPMhv4+TRlAVdaIVn//Iao3mbNKBE3Pw56rYnrluD1EGecV
+9Pd+SjzyMSI1YWMagnllZXbKedwQ3nyRHPBKJ5B6StSkwhiTGUkxY0l7FUvHPzu8
+Oov0mxcQkdKFZuDmzxs5riEfriJdMghNASr5NkHCJ963PF6TGsC1ZzfFk2jiD7Zs
+m41a5oSS8CWzuS7O2niB
+=LFRn
 -----END PGP SIGNATURE-----
