@@ -1,6 +1,14 @@
 # ChangeLog for www-apps/owncloud
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/owncloud/ChangeLog,v 1.64 2015/03/11 16:21:57 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/owncloud/ChangeLog,v 1.65 2015/05/04 08:36:09 voyageur Exp $
+
+  04 May 2015; Bernard Cafarelli <voyageur@gentoo.org> +owncloud-8.0.3.ebuild:
+  Version bump, drop depend.php eclass use
+
+*owncloud-8.0.3 (04 May 2015)
+
+  04 May 2015; Bernard Cafarelli <voyageur@gentoo.org> +owncloud-8.0.3.ebuild:
+  Version bump
 
 *owncloud-8.0.2 (11 Mar 2015)
 *owncloud-7.0.5 (11 Mar 2015)
